<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    0-->
    <item
        android:id="@+id/homePage"
        android:icon="@drawable/ic_home"
        android:title="@string/home_p"
        android:visible="true"
        android:iconTint="@color/black" />
<!--    1-->
    <item
        android:id="@+id/catalogPage"
        android:icon="@drawable/ic_catalog"
        android:title="@string/catalog"
        android:visible="true"
        android:iconTint="@color/black" />
<!--    2-->
    <item
        android:id="@+id/servicePage"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart"
        android:visible="true"
        android:iconTint="@color/black" />
<!--    3-->
    <item
        android:id="@+id/contactPage"
        android:icon="@drawable/ic_person"
        android:title="@string/contact"
        android:visible="true"
        android:iconTint="@color/black"/>
<!--    4-->
    <item
        android:id="@+id/userPage"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart"
        android:visible="false"
        android:iconTint="@color/black" />
</menu>