<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".catalogPage">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navbar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/head_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/course_off"
            android:textColor="@color/black"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/roundcorner"
            android:contentDescription="@string/search_link"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/head_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/catalog"
            android:textColor="#263238"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courseRecyclerXml"
        android:layout_width="wrap_content"
        android:layout_height="592dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterMenu"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <SearchView
            android:id="@+id/courseSearcher"
            android:visibility="visible"
            android:layout_width="245.84543dp"
            android:layout_height="48dp"
            android:searchHintIcon="@color/white"
            android:background="@color/navbar_color"
            android:queryHint="course_search"
            android:iconifiedByDefault="false"
            app:cornerRadius="20dp">
        </SearchView>

        <SearchView
            android:id="@+id/filterSearcher"
            android:visibility="gone"
            android:layout_width="245.84543dp"
            android:layout_height="48dp"
            android:searchHintIcon="@color/white"
            android:background="@color/navbar_color"
            android:queryHint="filter search"
            android:iconifiedByDefault="false"
            app:cornerRadius="20dp">
        </SearchView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filterBig"
            android:layout_width="245.84543dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/navbar_color"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filterSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/navbar_color"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:visibility="visible"
            app:cornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filterRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/filterSmall"
            app:layout_constraintStart_toEndOf="@+id/filterSmall"
            app:layout_constraintTop_toTopOf="@+id/filterSmall" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterRecycler1"
        android:layout_width="match_parent"
        android:layout_height="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/courseRecyclerXml" />
</androidx.constraintlayout.widget.ConstraintLayout>